# Diversifying-Open-Source

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  ISSUE_TEMPLATE.md  LICENSE  NOTICE  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  github-label-sync.yml
.github/ISSUE_TEMPLATE/: bug_report.md  governance_change.md
.github/workflows/: lint-docs.yml  policy-checks.yml
Daily/: CODE_REVIEW.md  CONTRIBUTING.md  MEETINGS.md  README.md  SUPPORT.md  communication-practices.md
Long-Term/: CODE_OF_CONDUCT.md  CREDIT.md  GOVERNANCE.md  LICENSE.md  MAINTAINERS.md  OWNERSHIP.md  README.md  restorative-process.md
Procedural/: ACCESSIBILITY.md  ADOPTERS.md  CHANGELOG.md  FUNDING.md  LOCALIZATION.md  README.md  SECURITY.md  audit-checklist.md  decision-log.md  role-rotation.md
Procedural/metrics/: README.md  chaoss-mapping.md  dashboard.md  data-sources.md  review-notes.md
cli/: .gitignore  IMPLEMENTATION.md  INSTALL.md  MANIFEST.in  QUESTIONNAIRE_GUIDE.md  README.md  pyproject.toml  setup.py  setup_templates.py
cli/diversity_standard/: __init__.py  cli.py  config.py  document_mapping.yml  generator.py  inspector.py  questionnaire.py  questions.yml  template_examples.md  utils.py
cli/tests/: __init__.py  test_cli.py
templates/Daily/: CONTRIBUTING.md  README.md
templates/Long-Term/: GOVERNANCE.md  README.md  restorative-process.md
templates/Procedural/: ADOPTERS.md  CHANGELOG.md  (+6 more)
tests/: README.md
(+1 files in other folders)
